try fix white space

--- a/src/components/Social.module.css
+++ b/src/components/Social.module.css
@@ -1,10 +1,9 @@
 .footerContainer {
-  width: 100%;
+  width: 100vw;
   padding: 40px 30px 20px;
   background-color: #111;
   position: fixed;
   bottom: 0;
-  left: 0;
   transform: translateY(100%);
   transition: transform 0.5s ease-in-out;
   z-index: 1000;
